# stack

./: .gitignore  CMakeLists.txt  Makefile  README.md  stack-test.c  stack.c  stack.h
include/: stack.h
